fix: prevent overflow of gridboxes
feat: left-click on gridboxes changes its color to black

--- a/style.css
+++ b/style.css
@@ -6,8 +6,14 @@
     width: 500px;
     height: 500px;
     border: 1px solid black;
-    display: grid;
+    display: flex;
+    flex-direction: column;
 }
 .gridbox{
     border: 1px solid black;
+    flex-grow: 1;
+}
+.row{
+    display: flex;
+    flex-grow: 1;
 }
